intitial file structure established

--- a/index.html
+++ b/index.html
@@ -8,7 +8,5 @@
     <script src="./app.js" defer></script>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>
-    Testing
-  </body>
+  <body></body>
 </html>
