--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
     <script src="./app.js" defer></script>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="game-container">
+      <div id="a" class="field">A</div>
+      <div id="b" class="field">B</div>
+      <div id="c" class="field">C</div>
+      <div id="d" class="field">D</div>
+      <div id="e" class="field">E</div>
+      <div id="f" class="field">F</div>
+      <div id="g" class="field">G</div>
+      <div id="h" class="field">H</div>
+      <div id="i" class="field">I</div>
+    </div>
+  </body>
 </html>
