basic file structure established

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
-    <script src="./app.js" defer></script>
     <link rel="stylesheet" href="./style.css" />
+    <script src="./app.js"></script>
   </head>
   <body>
     <div class="game-container">
-      <div id="a" class="field">A</div>
-      <div id="b" class="field">B</div>
-      <div id="c" class="field">C</div>
-      <div id="d" class="field">D</div>
-      <div id="e" class="field">E</div>
-      <div id="f" class="field">F</div>
-      <div id="g" class="field">G</div>
-      <div id="h" class="field">H</div>
-      <div id="i" class="field">I</div>
+      <div class="a">A</div>
+      <div class="b">B</div>
+      <div class="c">C</div>
+      <div class="d">D</div>
+      <div class="e">E</div>
+      <div class="f">F</div>
+      <div class="g">G</div>
+      <div class="h">H</div>
+      <div class="i">I</div>
     </div>
   </body>
 </html>
