--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   </head>
   <body>
     <div class="game-container">
-      <div class="a">A</div>
-      <div class="b">B</div>
-      <div class="c">C</div>
-      <div class="d">D</div>
-      <div class="e">E</div>
-      <div class="f">F</div>
-      <div class="g">G</div>
-      <div class="h">H</div>
-      <div class="i">I</div>
+      <div class="game-square" id="a">A</div>
+      <div class="game-square" id="b">B</div>
+      <div class="game-square" id="c">C</div>
+      <div class="game-square" id="d">D</div>
+      <div class="game-square" id="e">E</div>
+      <div class="game-square" id="f">F</div>
+      <div class="game-square" id="g">G</div>
+      <div class="game-square" id="h">H</div>
+      <div class="game-square" id="i">I</div>
     </div>
   </body>
 </html>
