board displaying correctly. player class set up, controller module set up.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="game-container">
-      <div id="a" class="field">A</div>
+      <!-- <div id="a" class="field">A</div>
       <div id="b" class="field">B</div>
       <div id="c" class="field">C</div>
       <div id="d" class="field">D</div>
@@ -18,7 +18,7 @@
       <div id="f" class="field">F</div>
       <div id="g" class="field">G</div>
       <div id="h" class="field">H</div>
-      <div id="i" class="field">I</div>
+      <div id="i" class="field">I</div> -->
     </div>
   </body>
 </html>
