turn change and board dissplay working correctly, now working on header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <header class="header"></header>
     <div class="game-container">
       <!-- <div id="a" class="field">A</div>
       <div id="b" class="field">B</div>
