header player cards positioned correctly

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header class="header"></header>
+    <header class="header">
+      <div class="player-container">
+        <h2 class="player" id="player-x">X</h2>
+        <h2 class="player" id="player-o">O</h2>
+      </div>
+    </header>
     <div class="game-container">
       <!-- <div id="a" class="field">A</div>
       <div id="b" class="field">B</div>
