turn color change functionality working

--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <title>Tic Tac Toe</title>
     <script src="./app.js" defer></script>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gaegu&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
       <div class="player-container">
-        <h2 class="player" id="player-x">X</h2>
+        <h2 class="player turn-highlight" id="player-x">X</h2>
         <h2 class="player" id="player-o">O</h2>
       </div>
     </header>
