--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       <div id="g" class="field">G</div>
       <div id="h" class="field">H</div>
       <div id="i" class="field">I</div> -->
+
+      <!-- <div class="winner-display"><h1>X Wins!</h1></div> -->
     </div>
   </body>
 </html>
